# handwriting-recognition-api

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/: CMakeLists.txt  api_handler.cpp  api_handler.h  authentication.cpp  authentication.h  handwriting_recognizer.cpp  handwriting_recognizer.h  main.cpp
tests/: test_api_handler.cpp  test_authentication.cpp  test_handwriting_recognizer.cpp
